<resources>
    <string name="app_name">KershoMan</string>


    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_name" translatable="false">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>

    <string name="arabic">عربي</string>
    <string name="english" translatable="false">English</string>
    <string name="change_language">Chose App Language</string>

    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>

    <string name="next" translatable="false">NEXT</string>
    <string name="finish" translatable="false">FINISH</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="walking" translatable="false">Walking</string>
    <string name="walking_desc" translatable="false">Go for a walk after meal for better digestion</string>
    <string name="cycling" translatable="false">Cycling</string>
    <string name="cycling_desc" translatable="false">if you can\'t run, can\'t walk, then atleat rotate your legs</string>
    <string name="fit" translatable="false">Become FIT</string>
    <string name="fit_desc" translatable="false">Do either of the earlier and get a body like this</string>
    <string name="swimming" translatable="false">Swimming</string>
    <string name="swimming_desc" translatable="false">Explore the world under water with swimming</string>
    <string name="running" translatable="false">Running</string>
    <string name="running_desc" translatable="false">Daily running keeps body in shape and inrease stamina</string>


    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="show_pwd" translatable="false">Show Password</string>
    <string name="hide_pwd" translatable="false">Hide Password</string>
    <string name="forgot" translatable="false">Forgot password?</string>
    <string name="closebutton" translatable="false">Close Button for Activity</string>
    <string name="newUser" translatable="false">Not a Member yet? Sign Up here.</string>
    <string name="fullName" translatable="false">Full Name</string>
    <string name="mobileNumber" translatable="false">Mobile Number</string>
    <string name="location" translatable="false">Location</string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="terms_conditions" translatable="false">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp" translatable="false">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid" translatable="false">Please enter your Registered Email Id below:</string>
    <string name="submit" translatable="false">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="login_to" translatable="false">Welcome to KershoMan</string>
    <string name="register_text" translatable="false">New to KershoMan? \n join us to enjoy our offers and deals!</string>
    <string name="register_later" translatable="false">register later</string>
    <string name="birth_date">Birth Date</string>
    <string name="select_area" translatable="false">Select Your ِArea…</string>
    <string name="delete" translatable="false">DELETE</string>

    <string-array name="locations1">
        <item> </item>
        <item>Nasr City</item>
        <item>6 of October</item>
        <item>Heliopolis</item>
    </string-array>

    <string-array name="categories">
        <item>Main Dish</item>
        <item>Salad</item>
        <item>Soup</item>
    </string-array>


    <string-array name="categories_english">
        <item>Main Dish</item>
        <item>Salad</item>
        <item>Soup</item>
    </string-array>

    <string-array name="locations">
        <item>Select Your ِArea…</item>
        <item>Maadi</item>
        <item>Nasr City</item>
        <item>6 of October</item>
        <item>Heliopolis</item>
    </string-array>


    <string name="title_activity_main" translatable="false">Cook House</string>
    <string name="title_activity_cart" translatable="false">Your Cart</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Cook House</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <string name="category_main">Main dish</string>

    <string name="category_salads">Salads</string>

    <string name="category_soups">Soups</string>
    <string name="action_cart">Cart</string>
    <string name="login_msg" translatable="false">you need to login or register to be able to proceed on your order</string>
    <string name="home_address" translatable="false">Home Address</string>
    <string name="your_point_text" translatable="false">Points</string>
    <string name="job" translatable="false">Job (optional)</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="my_addresses_info" translatable="false">No addresses added, Add one</string>
    <string name="action_add">ADD</string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="change_app_language">Change Language</string>
    <string name="setting_label">Settings</string>
    <string name="curruncy">EGP</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_phone">Change Phone</string>
    <string name="addresses">Addresses</string>
    <string name="new_phone_text">201XXXXXXXXX</string>
    <string name="area">Area</string>
    <string name="add_name">Address Name</string>
    <string name="street">street</string>
    <string name="building_num">Building No.</string>
    <string name="floor">Floor No.</string>
    <string name="apartment">Apartment No.</string>
    <string name="landmark">Landmark</string>
    <string name="update">update</string>
    <string name="action_skip">skip</string>
    <string name="mobileNumber2">Mobile Number 2 (optional)</string>
    <string name="enter_code">Enter confirmation code</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="forget_password">Forget Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send">Send</string>
    <string name="registered_phone_text">201XXXXXXXXX</string>
    <string name="code_hint">A confirmation Code will be sent to your resisted mobile number</string>
    <string name="profile">Profile</string>
    <string name="options">Options:</string>
    <string name="classic_french_croissant">Classic French Croissant</string>
    <string name="_50_egp">50 EGP</string>
    <string name="discription">Homemade French Croissant stuffed with emental cheese and served with bla bla bla bla bla bla bla bla bla bla bla</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_hint">2</string>
    <string name="size">Size:</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="sides1">Sides1:</string>
    <string name="sides2">Sides2:</string>
    <string name="total">Total:</string>
    <string name="price_hint">50 EGP</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="new_order">New Order</string>
    <string name="add_edit_addresses">Add / Edit Addresses</string>
    <string name="default_mobile">Mobile</string>
    <string name="add_temp_mobile">Add temp mobile</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="add_edit_mobiles">Add / Edit Mobiles</string>
    <string name="write_a_comment">Add your comment (optional)</string>
    <string name="now">Now</string>
    <string name="schedule">Schedule</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="cancel">cancel</string>
    <string name="maps_title">Confirmation</string>
    <string name="maps_message">Are you sure you want to select location from map?</string>
    <string name="account_info">Account Info</string>
    <string name="summary">Summary</string>
    <string name="to_be_delivered_in">To be delivered in</string>
    <string name="to_address">To Address</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="items">Items</string>
    <string name="canceled">Canceled</string>
    <string name="your_cart">Your Cart</string>
    <string name="promo">Promo</string>
    <string name="add_promo_code">Add Promo Code</string>
</resources>
