<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/code_hint"/>

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registered_phone_text"
            android:inputType="phone"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:singleLine="true"/>
        <Button
            android:id="@+id/btn_send"
            style="?android:textAppearanceSmall"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:textColor="#ffffff"
            android:text="@string/send"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_form"
            android:textStyle="bold" />



</LinearLayout>