<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@color/white"
    android:layout_gravity="center">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_lock"/>


    <TextView
        android:id="@+id/login_text"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text = "@string/change_password"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/colorPrimary" />




    <LinearLayout
        android:id="@+id/linear_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_below="@+id/login_text"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="28dp"
        android:gravity="center">



        <EditText
            android:id="@+id/old_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:background="@drawable/rectangle"
            android:paddingStart="5dp"
            android:singleLine="true"/>


        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:background="@drawable/rectangle"
            android:paddingStart="5dp"
            android:singleLine="true" />


        <EditText
            android:id="@+id/new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:background="@drawable/rectangle"
            android:paddingStart="5dp"
            android:singleLine="true" />

    </LinearLayout>


    <!-- Login Button -->

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linear_group"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_form"
        android:textColor="@color/white"
        android:text="@string/confirm"/>





</RelativeLayout>