<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha=".5"
        android:src="@drawable/cook_background"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:src="@drawable/cook_house_logo"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/change_language"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_arabic"
            style="?android:textAppearanceSmall"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/arabic"
            android:textColor="#ffffff"
            android:background="@drawable/button_form"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_english"
            style="?android:textAppearanceSmall"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="15dp"
            android:textColor="#ffffff"
            android:text="@string/english"
            android:background="@drawable/button_form"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>